# HostDemo

./: .gitignore  Directory.Build.props  build.proj  nuget.config  readme.md
src/DotNetBridge/: CMakeLists.txt  DotNetBridge.csproj  dotnetbridge.c
src/DotNetLib/: Lib.cs
src/JavaHost/: JavaHost.java  JavaHost.proj
